--- a/member.css
+++ b/member.css
@@ -8,6 +8,7 @@ body {
 	background-color: white;
 	border: 10px rgb(129, 20, 27) solid;
 	padding: 20px;
+	font-family: Georgia, serif;
 }
 
 hr {
@@ -19,21 +20,35 @@ h1 {
 	text-align: center;
 }
 
+
+
 input[type="submit"] {
 	width: 90%;
 	font-size: 24px;
+	background-color: rgb(129, 20, 27);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 15px;
 }
 
-strong {
+span {
 	float: left;
 	text-align: right;
 	width: 280px;
 	padding-right: 1em;
-	font-size: 16px;
+	font-size: 17px;
 }
 
 div {
-	margin-bottom: 20px;
+	margin-top: 20px;
 	margin-left: 20px;
+}
+
+p, .subs {
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
